--- a/SubscriptApp/pom.xml
+++ b/SubscriptApp/pom.xml
@@ -7,7 +7,7 @@
   <groupId>org.openjfx</groupId>
   <artifactId>javafx-maven-archetypes</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>SubscriptionApp</name>
+  <name>SubscriptApp</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,7 +24,11 @@
       <artifactId>javafx-fxml</artifactId>
       <version>17.0.6</version>
     </dependency>
-
+<dependency>
+      <groupId>org.kordamp.bootstrapfx</groupId>
+      <artifactId>bootstrapfx-core</artifactId>
+      <version>0.4.0</version>
+    </dependency>
 <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
