--- a/SubscriptApp/pom.xml
+++ b/SubscriptApp/pom.xml
@@ -62,7 +62,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>org.openjfx.javafxmavenarchetypes/org.openjfx.javafxmavenarchetypes.HelloApplication</mainClass>
+              <mainClass>com.SEApp.app/com.SEApp.app.HelloApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
