--- a/SubscriptApp/.env
+++ b/SubscriptApp/.env
@@ -1,3 +1,4 @@
-MYSQL_URL=oneVar
-MYSQL_USER=oneVar
-MYSQL_PASS=oneVar
+MYSQL_URL=jdbc:sqlserver://serveurprojetse.database.windows.net:1433;database=projetse;user=projetseadmin@serveurprojetse;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+MYSQL_USER=projetseadmin
+MYSQL_PASS="S#7ygJy@nR@kKqsA"
+BCRYPT_SALT="$2a$10$ZjJjZjQyZjU0ZjQyZjQyZ."
