--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       working-directory: ./SubscriptApp/
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean package --file SubscriptApp/pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
