--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,9 +28,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      working-directory: ./SubscriptApp/
-      run: mvn -B clean package --file SubscriptApp/pom.xml
+      run: mvn -B clean package --file ./pom.xml
+      working-directory: ./ProjetSE/SubscriptApp/
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      with:
+        working-directory: ./ProjetSE/SubscriptApp/
