--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B clean package --file pom.xml
-      working-directory: SubscriptApp
+      run: mvn -B clean package --file /home/runner/work/SEProject/SEProject/SubscriptApp/pom.xml
+      working-directory: /home/runner/work/SEProject/SEProject/SubscriptApp
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
