--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,20 +20,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+        cache-dependency-path: 'SubscriptApp/pom.xml'
     - name: Build with Maven
-      run: mvn -B clean package --file /home/runner/work/SEProject/SEProject/SubscriptApp/pom.xml
-      working-directory: /home/runner/work/SEProject/SEProject/SubscriptApp
+      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-      with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          path: /home/runner/work/SEProject/SEProject/SubscriptApp/pom.xml
