--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,4 @@ jobs:
         cache: maven
         cache-dependency-path: 'SubscriptApp/pom.xml'
     - name: Build with Maven
-      run: mvn -B package --file SubscriptApp/pom.xml
+      run: mvn -B clean test --file SubscriptApp/pom.xml
