--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,4 +41,6 @@ jobs:
       - name: Set up environment variable for tests
         run: echo "export ENVIRONMENT=${{ env.ENVIRONMENT }}" >> $GITHUB_ENV
       - name: Run Tests with Maven
+        env:
+          ENVIRONMENT: 'test'
         run: mvn -B test --file SubscriptApp/pom.xml
