--- a/SubscriptApp/.env
+++ b/SubscriptApp/.env
@@ -3,6 +3,8 @@ TEST_MYSQL_USER=projetseadmin
 TEST_MYSQL_PASS="S#7ygJy@nR@kKqsA"
 TEST_BCRYPT_SALT="$2a$10$ZjJjZjQyZjU0ZjQyZjQyZ."
 
+EeNVIROMENT=test
+
 MYSQL_URL=jdbc:sqlserver://localhost:1433;databaseName=localAzureDB;user={your_user_here};password={your_password_here};encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 MYSQL_USER=SA
 MYSQL_PASS="YourStrong@Passw0rd"
