--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,19 +22,32 @@ jobs:
           distribution: 'temurin'
           cache: maven
           cache-dependency-path: 'SubscriptApp/pom.xml'
-      - name: Build with Maven
-        run: mvn -B clean package --file SubscriptApp/pom.xml
+      - name: Compile with Maven
+        run: mvn -B compile --file SubscriptApp/pom.xml
+
+  start-docker-compose:
+
+    needs: build
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v4
+      - name: Start Docker Compose
+        run: docker-compose -f your-docker-compose-file.yml up -d
 
   test:
 
-    needs: build  # Ensure that the 'build' job is completed before starting the 'test' job
+    needs: start-docker-compose
 
     runs-on: ubuntu-latest
     env:
       ENVIRONMENT: 'test'
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out the code
+        uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -44,3 +57,15 @@ jobs:
           cache-dependency-path: 'SubscriptApp/pom.xml'
       - name: Run Tests with Maven
         run: mvn -B test --file SubscriptApp/pom.xml
+
+  stop-docker-compose:
+
+    needs: test
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v4
+      - name: Stop Docker Compose
+        run: docker-compose -f your-docker-compose-file.yml down
