--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v4
       - name: Start Docker Compose
-        run: docker-compose -f your-docker-compose-file.yml up -d
+        run: docker-compose -f DockerDB/docker-compose.yml up -d
 
   test:
 
@@ -68,4 +68,4 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v4
       - name: Stop Docker Compose
-        run: docker-compose -f your-docker-compose-file.yml down
+        run: docker-compose -f DockerDB/docker-compose.yml down
