--- a/SubscriptApp/.env
+++ b/SubscriptApp/.env
@@ -1,9 +1,4 @@
-TEST_MYSQL_URL=jdbc:sqlserver://serveurprojetse.database.windows.net:1433;database=projetse;user={your_user_here}@serveurprojetse;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-TEST_MYSQL_USER=projetseadmin
-TEST_MYSQL_PASS="S#7ygJy@nR@kKqsA"
-TEST_BCRYPT_SALT="$2a$10$ZjJjZjQyZjU0ZjQyZjQyZ."
-
-MYSQL_URL=jdbc:sqlserver://localhost:1433;databaseName=localAzureDB;user={your_user_here};password={your_password_here};encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-MYSQL_USER=SA
-MYSQL_PASS="YourStrong@Passw0rd"
+MYSQL_URL=jdbc:sqlserver://serveurprojetse.database.windows.net:1433;database=projetse;user=projetseadmin@serveurprojetse;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+MYSQL_USER=projetseadmin
+MYSQL_PASS="S#7ygJy@nR@kKqsA"
 BCRYPT_SALT="$2a$10$ZjJjZjQyZjU0ZjQyZjQyZ."
