--- a/SubscriptApp/.env
+++ b/SubscriptApp/.env
@@ -1,4 +1,11 @@
-MYSQL_URL=jdbc:sqlserver://serveurprojetse.database.windows.net:1433;database=projetse;user=projetseadmin@serveurprojetse;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-MYSQL_USER=projetseadmin
-MYSQL_PASS="S#7ygJy@nR@kKqsA"
+zzMYSQL_URL=jdbc:sqlserver://serveurprojetse.database.windows.net:1433;database=projetse;user=projetseadmin@serveurprojetse;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+zzMYSQL_USER=projetseadmin
+zzMYSQL_PASS="S#7ygJy@nR@kKqsA"
+
+PSQL_URL=jdbc:postgresql://localhost:5432/localAzureDB
+PSQL_USER=postgres
+PSQL_PASS=YourStrong@Passw0rd
+
+
+
 BCRYPT_SALT="$2a$10$ZjJjZjQyZjU0ZjQyZjQyZ."
