--- a/SubscriptApp/pom.xml
+++ b/SubscriptApp/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>jbcrypt</artifactId>
       <version>0.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.1</version>
+    </dependency>
 
   </dependencies>
 
