--- a/DockerDB/substrack_postgres/docker-compose.yml
+++ b/DockerDB/substrack_postgres/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3'
 services:
   postgresql:
+    container_name: subscript_postgres
     image: postgres:latest
     environment:
-      POSTGRES_USER: postgres
+      POSTGRES_USER: myPostgres
       POSTGRES_PASSWORD: YourStrong@Passw0rd
-      POSTGRES_DB: localAzureDB
+      POSTGRES_DB: postgres
     ports:
-      - "5432:5432"
+      - "9876:5432"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
