Refactor user -> member

--- a/SubscriptApp/.env
+++ b/SubscriptApp/.env
@@ -6,6 +6,7 @@ PSQL_URL=jdbc:postgresql://localhost:9876/postgres
 PSQL_USER=myPostgres
 PSQL_PASS=YourStrong@Passw0rd
 
-
-
 BCRYPT_SALT="$2a$10$ZjJjZjQyZjU0ZjQyZjQyZ."
+
+ADMIN_LOGIN=admin
+ADMIN_PASS=admin123
