--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI with Maven and PostgreSQL
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  app_build:
 
     runs-on: ubuntu-latest
 
@@ -23,11 +23,27 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean package --file SubscriptApp/pom.xml
 
-  test:
-
-    needs: build  # Ensure that the 'build' job is completed before starting the 'test' job
+  db_build:
 
     runs-on: ubuntu-latest
+
+    needs: app_build  # Ensure that the 'app_build' job is completed before starting the 'db_build' job
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get install -y docker-compose
+      - name: Start PostgreSQL with Docker Compose
+        run: |
+          cd ./DockerDB/substrack_postgres/
+          docker-compose up -d
+
+  tests_run:
+
+    runs-on: ubuntu-latest
+
+    needs: db_build  # Ensure that the 'db_build' job is completed before starting the 'tests_run' job
 
     steps:
       - uses: actions/checkout@v4
