--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "*" ]
 
 jobs:
-  app_build:
+  app_compile:
 
     runs-on: ubuntu-latest
 
@@ -18,14 +18,14 @@ jobs:
           distribution: 'temurin'
           cache: maven
           cache-dependency-path: 'SubscriptApp/pom.xml'
-      - name: Build with Maven
-        run: mvn -B clean package --file SubscriptApp/pom.xml
+      - name: Compile app with Maven
+        run: mvn -B clean compile --file SubscriptApp/pom.xml
 
   db_build:
 
     runs-on: ubuntu-latest
 
-    needs: app_build  # Ensure that the 'app_build' job is completed before starting the 'db_build' job
+    needs: app_compile  # Ensure that the 'app_build' job is completed before starting the 'db_build' job
 
     steps:
       - uses: actions/checkout@v4
