--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,11 +21,27 @@ jobs:
       - name: Compile app with Maven
         run: mvn -B clean compile --file SubscriptApp/pom.xml
 
-  db_build:
+#  db_build:
+#
+#    runs-on: ubuntu-latest
+#
+#    needs: app_compile  # Ensure that the 'app_build' job is completed before starting the 'db_build' job
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Set up Docker Compose
+#        run: |
+#          sudo apt-get install -y docker-compose
+#      - name: Start PostgreSQL with Docker Compose
+#        run: |
+#          cd ./DockerDB/substrack_postgres/
+#          docker-compose up -d
+
+  tests_run:
 
     runs-on: ubuntu-latest
 
-    needs: app_compile  # Ensure that the 'app_build' job is completed before starting the 'db_build' job
+    needs: app_compile  # Ensure that the 'db_build' job is completed before starting the 'tests_run' job
 
     steps:
       - uses: actions/checkout@v4
@@ -36,15 +52,6 @@ jobs:
         run: |
           cd ./DockerDB/substrack_postgres/
           docker-compose up -d
-
-  tests_run:
-
-    runs-on: ubuntu-latest
-
-    needs: db_build  # Ensure that the 'db_build' job is completed before starting the 'tests_run' job
-
-    steps:
-      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
